# peerpage

./: .gitignore  CLAUDE.md  CODING_STYLE.md  NIP.md  README.md  TODO.md  cli.py  config.py  coverage.sh  daemon.sh  dedup_check.py  fileutil.py  nostr-debug.py  nostr_client.py  peerpage.service  publisher.py  pyproject.toml  requirements.txt  snapshot.py  stress.py  test.sh  test_cli.py  test_config.py  test_fileutil.py  test_nostr_client.py  test_publish.py  test_publisher.py  test_snapshot.py  test_trackers.py  test_version.py  trackers.py  tui.py  version.py
daemon/: __main__.py  httpserver.py  nostr_watcher.py  session.py  test_httpserver.py  test_nostr_watcher.py  test_session.py  test_watcher.py  watcher.py
daemon/static/: style.css
daemon/templates/: base.html  config.html  dashboard.html  dashboard_row.html  files.html  not_available.html  not_downloaded.html
doc/: bugs.md  robustness.md  version-lifecycle.md
